Tue Feb 15 14:52:26 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/PDF.cc (parseNonTextLine): Fix bogus escape sequences
	around Title parsing.  (Fixes PR#740)

	* htsearch/Display.cc (display, displaySyntaxError),
	htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html,
	htcommon/defaults.cc: Add new attribute "nph" to send out
	non-parsed headers for servers that do not supply HTTP headers on
	CGI output (e.g. IIS).	If nph is set, send out HTTP OK header,
	as suggested by Matthew Daniel <mdaniel@scdi.com> (PR#727)

	* htdig/Document.cc (getdate): avoid strftime() altogether on
	filled-in tm structure, to avoid recurring segfault problems. (PR#734)

	* htlib/strptime.cc (mystrptime): Use Warren Jones's fix to deal
	with a web server that returns dates with a two digit year field.
	(Fixes PR#770)

	* htdig/HTML.cc (HTML, parse, do_tag), htcommon/defaults.cc,
	htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Add max_keywords attribute to limit meta keyword spamming.

Wed Dec  8 18:19:32 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/FAQ.html, htdoc/bugs.html: Update to refer to latest versions.
	(Update for 3.1.4 release.)

Wed Dec  8 18:10:27 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/QuotedStringList.cc (Create): Make sure that an empty
	token isn't ignored.

Tue Dec  7 10:26:58 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Display.cc (setVariables): Fix a compilation error by
	making a statment with '?' an explicit if-else statment.

	* htdoc/RELEASE.html: Change case_sensitive fix to a bug-fix,
	update release date for 12/9/99. (We certainly didn't release yesterday!)

Mon Dec  6 22:17:21 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(Display): Add missing call to setupTemplates(),
	for handling template_patterns. Oops!
	* htdoc/attrs.html: Fixed a couple typos in new attributes.
	* htdoc/ChangeLog: Update to latest version.
